Total text aline right

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <tfoot>
     <tr>
       <th style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: left; min-width: 200px;" colspan="2">12 Orders; Average: $449</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: left; min-width: 200px;" colspan="3">TOTAL: $5,865.00 (Estimated)</th>
+      <th style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: right; min-width: 200px;" colspan="3">TOTAL: $5,865.00 (Estimated)</th>
     </tr>
   </tfoot>
 </table>
