--- a/index.html
+++ b/index.html
@@ -7,45 +7,64 @@
 <body>
     <div style="width: 100%; text-align: center; font-size: 24px; font-weight: bold;">Appraisal Orders</div>
     <div style="width: 100%; text-align: center; font-size: 16px;">Date: April 21, 2024</div>
-<table style="border-collapse: collapse; width: 100%;">
-  <thead>
-    <tr>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">PROPERTY ADDRESS</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">AMC/LENDER</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">FORM</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">FEE</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">APPRAISER</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">38 Bailey Street, Boston, MA</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Leader Bank</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1004</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$525</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Tarique Haque</td>
-    </tr>
-    <tr>
-      <td style="padding: 10px; border: 1px solid #ddd; background-color: #f2f2f2; text-align: left;">23 Swallow Street, Unit 1, Boston, MA</td>
-      <td style="padding: 10px; border: 1px solid #ddd; background-color: #f2f2f2; text-align: left;">Stewart Valuation</td>
-      <td style="padding: 10px; border: 1px solid #ddd; background-color: #f2f2f2; text-align: left;">1073</td>
-      <td style="padding: 10px; border: 1px solid #ddd; background-color: #f2f2f2; text-align: left;">$375</td>
-      <td style="padding: 10px; border: 1px solid #ddd; background-color: #f2f2f2; text-align: left;">ALAUDDIN CHOWDHURY</td>
-    </tr>
-    <tr>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1 Barnes Rd, Hingham, MA</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Valuenet</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Desktop</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$90</td>
-      <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Jakir Tarafder</td>
-    </tr>
-  </tbody>
-  <tfoot>
-    <tr>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: left; min-width: 200px;" colspan="2">12 Orders; Average: $449</th>
-      <th style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: right; min-width: 200px;" colspan="3">TOTAL: $5,865.00 (Estimated)</th>
-    </tr>
-  </tfoot>
-</table>
+    <div>
+      <div style="display: flex;position:relative;">
+        <div style="transform: rotate(270deg);">
+          <div style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: left; min-width: 200px;" colspan="2">12 Orders; Average: $449</div>
+        </div>
+        <table style="border-collapse: collapse; width: 100%;">
+          <thead>
+            <tr>
+              <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">PROPERTY ADDRESS</th>
+              <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">CLIENT</th>
+              <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">FORM</th>
+              <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">FEE</th>
+              <th style="padding: 10px; border: 1px solid #ddd; background-color: #139181; color: #FFFFFF; text-align: left;">APPRAISER</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">23 Swallow Street, Unit 1, Boston, MA</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Stewart Valuation</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1073</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$375</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">ALAUDDIN CHOWDHURY</td>
+            </tr>
+            <tr>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">38 Bailey Street, Boston, MA</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Leader Bank</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1004</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$525</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Tarique Haque</td>
+            </tr>
+            <tr>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">23 Swallow Street, Unit 1, Boston, MA</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Stewart Valuation</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1073</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$375</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">ALAUDDIN CHOWDHURY</td>
+            </tr>
+            <tr>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1 Barnes Rd, Hingham, MA</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Valuenet</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Desktop</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$90</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Jakir Tarafder</td>
+            </tr>
+            <tr>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">38 Bailey Street, Boston, MA</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Leader Bank</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">1004</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">$525</td>
+              <td style="padding: 10px; border: 1px solid #ddd; text-align: left;">Tarique Haque</td>
+            </tr>
+          </tbody>
+        </table>
+        <div style="transform: rotate(270deg);">
+          <div style="padding: 10px; border: 1px solid #ddd; background-color: #2F415E; color: #FFFFFF; text-align: right; min-width: 200px;" colspan="3">TOTAL: $5,865.00 (Estimated)</div>
+        </div>
+      </div>
+    </div>
+
 </body>
 </html>
